--- a/Project/lab/app/src/main/AndroidManifest.xml
+++ b/Project/lab/app/src/main/AndroidManifest.xml
@@ -13,15 +13,22 @@
         android:theme="@style/Theme._519LabLearnAndroid"
         tools:targetApi="31">
         <activity
+            android:name=".LitsMainActivity"
+            android:exported="false"
+            android:label="@string/title_activity_lits_main"
+            android:theme="@style/Theme._519LabLearnAndroid" />
+        <activity
             android:name=".MainActivity2"
             android:exported="true"
             android:label="@string/title_activity_main2"
-            android:theme="@style/Theme._519LabLearnAndroid" >
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
+            android:theme="@style/Theme._519LabLearnAndroid">
 
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
         <activity
             android:name=".MainActivity"
