--- a/Project/lab/app/src/main/AndroidManifest.xml
+++ b/Project/lab/app/src/main/AndroidManifest.xml
@@ -13,12 +13,24 @@
         android:theme="@style/Theme._519LabLearnAndroid"
         tools:targetApi="31">
         <activity
-            android:name=".LitsMainActivity"
+            android:name=".MenuActivity"
+            android:exported="true"
+            android:label="@string/title_activity_menu"
+            android:theme="@style/Theme._519LabLearnAndroid" >
+            <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter></activity>
+
+
+        <activity
+            android:name=".PokedexActivity"
             android:exported="false"
             android:label="@string/title_activity_lits_main"
             android:theme="@style/Theme._519LabLearnAndroid" />
         <activity
-            android:name=".MainActivity2"
+            android:name=".LifeCycleComposeActivity"
             android:exported="true"
             android:label="@string/title_activity_main2"
             android:theme="@style/Theme._519LabLearnAndroid">
@@ -31,7 +43,7 @@
             <!-- </intent-filter> -->
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".RPGCardActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme._519LabLearnAndroid">
