--- a/Project/lab/app/src/main/AndroidManifest.xml
+++ b/Project/lab/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,20 +13,24 @@
         android:theme="@style/Theme._519LabLearnAndroid"
         tools:targetApi="31">
         <activity
+            android:name=".SharedPreferencesActivity"
+            android:exported="false"
+            android:label="@string/title_activity_shared_preferences"
+            android:theme="@style/Theme._519LabLearnAndroid" />
+        <activity
             android:name=".MenuActivity"
             android:exported="true"
             android:label="@string/title_activity_menu"
-            android:theme="@style/Theme._519LabLearnAndroid" >
+            android:theme="@style/Theme._519LabLearnAndroid">
             <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter></activity>
-
-
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".PokedexActivity"
-            android:exported="false"
+            android:exported="true"
             android:label="@string/title_activity_lits_main"
             android:theme="@style/Theme._519LabLearnAndroid" />
         <activity
@@ -46,13 +50,7 @@
             android:name=".RPGCardActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme._519LabLearnAndroid">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:theme="@style/Theme._519LabLearnAndroid"></activity>
     </application>
 
 </manifest>
